# cc-later

./: .gitignore  README.md  SPEC.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
cc_later/: __init__.py  analytics.py  cli.py  compat.py  config.py  core.py  dashboard.py  dashboard_template.py  dispatcher.py  launchd.py  lock.py  models.py  notify.py  parser.py  paths.py  prompt.py  reporter.py  verify.py  window.py
commands/: dashboard.md  monitor.md  stats.md  status.md
hooks/: hooks.json
scripts/: __init__.py  capture.py  compact.py  dashboard.py  default_config.env  default_config.toml  handler.py  migrate_v4.py  monitor.py  probe.py  stats.py  status.py
skills/cc-later/: SKILL.md
skills/later/: SKILL.md
tests/: _loader.py  integration.sh  test_analytics.py  test_auto_resume.py  test_budget.py  test_capture.py  test_completion.py  test_config.py  test_config_and_format.py  test_dependencies.py  test_dry_run.py  test_handler_status_capture.py  test_handler_worktree_state.py  test_later_entries.py  test_locking.py  test_monitor.py  test_plugin_layout.py  test_prompt.py  test_reconcile.py  test_reconcile_nudge.py  test_reconcile_resume.py  test_reporter.py  test_retry.py  test_rotation.py  test_routing.py  test_security.py  test_stats_compact_tasks.py  test_status.py  test_trigger_schedules.py  test_utils_and_config.py  test_verify.py  test_window_budget.py  test_window_gates_budget.py  test_window_modes.py
